# tappy-plane

./: Cargo.toml  README.md  wasm-build.sh  wasm-install.sh
docs/: CNAME  index.html
docs/assets/shaders/: scroll.wgsl  slice.wgsl
docs/wasm/: tappy-plane.js
src/: animation.rs  assets.rs  debug.rs  main.rs  obstacle.rs  physics.rs  sprite_animation.rs  transitions.rs
src/scenes/: game.rs  menu.rs  mod.rs
src/shaders/: mod.rs  scroll_material.rs  slice_material.rs
wasm/: tappy-plane.js
